@@ -1,5 +1,12 @@
 2006-06-18  Benoît Dejean  <benoit@placenet.org>
 
+	* src/interface.c:
+
+	Change File menu name to Monitor.
+	Closes #342649.
+
+2006-06-18  Benoît Dejean  <benoit@placenet.org>
+
 	* src/proctable.c: (create_proctree), (proctable_new):
 
 	Displays process arguments as a tooltip if libsexy is found.
